Reorganising & adding some description & fixing plots

--- a/project/project2.ipynb
+++ b/project/project2.ipynb
@@ -79,6 +79,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We were provided two separate datasets containing Swiss tweets. They were formated differently and contained different fields. On top of this, while the first dataset contained data collected over multiple years (twitter-swisscom, refered to as second dataset), the other only covers a span of 10 months (Spinn3r, refered to as first dataset).\n",
+    "\n",
+    "\n",
     "The complete twitter data for both datsets was collected from the cluster provided in the class."
    ]
   },
@@ -107,9 +110,13 @@
    "source": [
     "### Preliminary analysis\n",
     "\n",
+    "The goal of our preliminary analysis was to decide which dataset would be more useful but also to familiarize ourselves with the chosen dataset in order to know if we need to adapt our research questions or enrich the dataset with external information in order to perform our analysis.\n",
+    "\n",
+    "After the analysis (presented below), we decided to use **both datasets** for our project. While the twitter-swisscom contains more precise location information (longitude and latitude), the Spinn3r dataset contains a sentiment analysis field as well as a language field and has a lot less data. Thus, we decided to create our functions and methods using the smaller dataset (Spinn3r) and use it as a proof of concept before going on a larger scale and use the swisscom-twitter dataset to further our analysis.\n",
+    "\n",
     "This dataset has an elaborate description of each field available on the [spinn3r website](http://docs.spinn3r.com/?Example#content-schema). Given the amount of data present in the cluster, we only look at one day to perform our first analysis (we will later show how we scale our operations using Spark).\n",
     "\n",
-    "Unlike the previous dataset, this dataset is given in JSON format (with nested elements). As we could not find how to extract all the data directly using the *read_json* function provided, we use a JSON normalizer (provided in the *Pandas* libary). \n",
+    "This dataset is given in JSON format and has nested elements. As the *read_json* function does not work well with nested JSON data, we use a JSON normalizer, which is provided in the *Pandas.io* libary. \n",
     "\n",
     "_Note: We will later see that Spark deals better with nested JSON._"
    ]
@@ -190,7 +197,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initial analysis of categorical data"
+    "#### Initial analysis of categorical data\n",
+    "\n",
+    "We now give a quick look into data contained in the example dataset, to find how we need to clean it."
    ]
   },
   {
@@ -218,8 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=[20, 10])\n",
-    "twitter_df[twitter_df.lang.isin(['de', 'fr', 'en'])]['source_location'].value_counts().tail()"
+    "twitter_df[twitter_df.lang.isin(['de', 'fr', 'en'])]['source_location'].value_counts().tail(20)"
    ]
   },
   {
@@ -484,7 +492,7 @@
    "outputs": [],
    "source": [
     "twitter_df['main'] = twitter_df['main'].map(alphanum_filter)\n",
-    "twitter_df['main'] = twitter_df['main'].str.replace('_', '') #not removed by following regex\n",
+    "twitter_df['main'] = twitter_df['main'].str.replace('_', '') #not removed by previous regex\n",
     "twitter_df.main.head()"
    ]
   },
@@ -496,7 +504,7 @@
     "\n",
     "After performing all these cleaning steps, the size of the set is **significantly reduced** (the new file only weights **2.4MB** instead of the **55MB** of the original file, allowing us to reduce the set by **30x**). This is particularly helpful as the whole dataset represents around **30GB**.\n",
     "\n",
-    "_Note:_ the code was defined as _**Raw NBConvert**_ as it is not meant to be run on the notebook but on the cluster. The code is only here as information for the reader."
+    "_Note:_ the code was defined as _**Raw NBConvert**_ as it is not meant to be run on the notebook but on the cluster. The code is only here as information for the reader, it's executable can be found in the run.py file."
    ]
   },
   {
@@ -613,11 +621,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We were provided two separate datasets containing Swiss tweets. They were formated differently and contained different fields. On top of this, while the first dataset contained data collected over multiple years (twitter-swisscom, refered to as second dataset), the other only covers a span of 10 months (Spinn3r, refered to as first dataset).\n",
+    "We now preform a general analysis of the dataset on which we preform all the NLP methods and unsupervised clustering on.\n",
     "\n",
-    "The goal of our first analysis was thus to decide which dataset would be more useful but also to familiarize ourselves with the chosen dataset in order to know if we need to adapt our research questions or enrich the dataset with external information in order to perform our analysis.\n",
-    "\n",
-    "After the analysis (presented below), we decided to use **both datasets** for our project. While the twitter-swisscom contains more precise location information (longitude and latitude), the Spinn3r dataset contains a sentiment analysis field as well as a language field and has a lot less data. Thus, we decided to create our functions and methods using the smaller dataset (Spinn3r) and use it as a proof of concept before going on a larger scale and use the swisscom-twitter dataset to further our analysis."
+    "We use a pkl file that was generated using *processing_pipeline.py* for speed an convenience."
    ]
   },
   {
@@ -640,7 +646,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We look at how many values we have for each field. The total number of tweets is $3936084$"
+    "We look at how many values we have for each field. The total number of tweets is $3936084$. We see that less than half of all tweets have a $geo\\_point$ value associated to them"
    ]
   },
   {
@@ -656,7 +662,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Distribution of categorical data"
+    "### Distribution of categorical data\n",
+    "\n",
+    "We now look at the distribution of categorical features in our dataset."
    ]
   },
   {
@@ -674,7 +682,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "We see that almost half of all tweets are in english, followed by french and german. The latter is interessting as given the swiss population, one would expect there to be more german than french tweets."
+   ]
   },
   {
    "cell_type": "code",
@@ -692,7 +702,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that most accounts do not contain information on the user's gender (meaning there is no way we can have an unbiased set). However, we have a significant number of profiles where the gender is documented meaning we could use these to look at the differences in mental distress between the genders."
+    "We see that most accounts do not contain information on the user's gender (meaning there is no way we can have an unbiased set). However, the dataset still contains over a third of profiles where the gender is documented meaning we could use these to look at the differences in mental distress between the genders. Also note that male and female are not equaly represented in the dataset."
    ]
   },
   {
@@ -710,13 +720,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Looking at the sentiment, we see that about three-quaters of all tweets are labeled as being neutral."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Distribution of temporal data"
+    "### Distribution of temporal data\n",
+    "\n",
+    "we now look at the temporal distribution of the data. We look at daily and yearly patterns."
    ]
   },
   {
@@ -726,23 +740,14 @@
    "outputs": [],
    "source": [
     "#Declaring functions\n",
-    "#May not be needed\n",
-    "\n",
     "def get_time_distribution(times):\n",
-    "    publishing_time = times.map(lambda x: x.hour).value_counts() / times.count()\n",
+    "    publishing_time = times.map(lambda x: x.hour).value_counts()\n",
     "    publishing_time.sort_index(inplace=True)\n",
     "    return publishing_time\n",
     "\n",
-    "def plot_daily(depressed):\n",
-    "    neg = get_time_distribution(depressed[depressed.sentiment == 'NEGATIVE']['published'])\n",
-    "    neut = get_time_distribution(depressed[depressed.sentiment == 'NEUTRAL']['published'])\n",
-    "    pos = get_time_distribution(depressed[depressed.sentiment == 'POSITIVE']['published'])\n",
-    "\n",
-    "    plt.plot(neg)\n",
-    "    plt.plot(neut)\n",
-    "    plt.plot(pos)\n",
-    "    plt.legend(['negative', 'neutral', 'positive'])\n",
-    "    plt.show()"
+    "def plot_daily(df):\n",
+    "    times = get_time_distribution(df['published'])\n",
+    "    return plt.plot(times)"
    ]
   },
   {
@@ -751,49 +756,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_daily(twitter_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_yearly(times):\n",
-    "    publishing_time = times.map(lambda x: x.month).value_counts() / times.count()\n",
-    "#     publishing_time.sort_index(inplace=True)\n",
-    "    return publishing_time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yearly_distribution = get_yearly(twitter_df.published)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.tsplot(data=yearly_distribution)\n",
+    "plot_daily(twitter_df)\n",
+    "plt.xlabel('hour')\n",
+    "plt.ylabel('number of tweets')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "We see that the number of tweets is the largest around 8pm and rapidly decreases through the night, reaching its lowest point at around 3 in the morning. We can also observe a dip in the number of tweets during lunch time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yearly_distribution = twitter_df.published.map(lambda x: x.month).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.tsplot(data=yearly_distribution, time=yearly_distribution.index)\n",
+    "plt.ylabel('number of tweets')\n",
+    "plt.xticks(range(1, 11),['jan', 'feb', 'mar', 'apr', 'mai', 'jun', 'jul', 'aug', 'sep', 'oct'])\n",
+    "plt.xlabel('month')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "looking at the yearly distribution we see that the dataset is not balanced. It is possible that some of this inbalance is due to the number of twitter users and thus tweets rappidly increasing over a 10 month period. It may also be linked with the way Spinn3r retrived data from the set."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -806,7 +809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using NLP _(Natural Language Processing)_ is necessary given the nature of our dataset: tweets. Following the steps used in previous courses and in the papers we read, we came up with the following pipeline in order to process the tweets (and dictionary). Unlike the previous part, we only used local functions.\n",
+    "Using NLP _(Natural Language Processing)_ is necessary given the nature of our dataset: tweets. Following the steps used in previous courses and in the papers we read, we came up with the following pipeline in order to process the tweets (and dictionary). The actualy pipeline is realized in the *processing_pipeline.py* script, as the pipeline takes about 5 mintes to run on our set of tweets. We here explain it's functionality.\n",
     "\n",
     "_Note: we use nltk, a goto python NLP library which was very interesting for us as it offered operations in the various languages we are working on._"
    ]
@@ -863,7 +866,7 @@
    "metadata": {},
    "source": [
     "NLP is mainly based on treating the data to obtain an adequate format to work with following 3 steps:\n",
-    "- Tokenizing: separating words \n",
+    "- Tokenizing: separating words, we use a special tweettokenizer to work onthe tweets\n",
     "- Stop-words removal\n",
     "- Stemming: keeping only the radical of a word (allows better comparison)"
    ]
@@ -1070,7 +1073,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Applying the dictionary"
+    "### Dictionary evaluation"
    ]
   },
   {
