--- a/project/project2.ipynb
+++ b/project/project2.ipynb
@@ -1418,15 +1418,25 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "dictionary = corpora.Dictionary(text)\n",
+    "dictionary = corpora.Dictionary(english_filtered.tokenized)\n",
     "dictionary.filter_extremes(no_below=5, no_above=.3) #remove too frequent and too infrequent words\n",
-    "texts = text.tolist() #list of all tweets\n",
-    "corpus = [dictionary.doc2bow(text) for text in texts]\n",
-    "\n",
-    "ldamodel = models.LdaMulticore(corpus, id2word=dictionary, num_topics=10, workers=3, iterations=100, passes=5)"
+    "texts = english_filtered.tokenized.tolist() #list of all tweets\n",
+    "corpus = [dictionary.doc2bow(text) for text in texts]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ldamodel = models.LdaMulticore(corpus, id2word=dictionary, num_topics=30, workers=3, iterations=100, passes=20)\n",
+    "ldamodel.show_topics()"
    ]
   },
   {
