Fixing dict name and dependencies

--- a/project/project2.ipynb
+++ b/project/project2.ipynb
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXAMPLE_PATH = 'swiss-tweet/example.json'\n",
+    "EXAMPLE_PATH = 'data/example_data/spinn3r_example.json'\n",
     "\n",
     "with open(EXAMPLE_PATH) as data_file:    \n",
     "    data = json.load(data_file)\n",
@@ -635,7 +635,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "twitter_df = pkl.load( open( \"processed_tweets.pkl\", \"rb\" ))"
+    "twitter_df = pkl.load( open( \"data/spinn3r_tweets/processed_tweets.pkl\", \"rb\" ))"
    ]
   },
   {
@@ -889,7 +889,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracts = gpd.read_file('mygeodata/ch-cantons.topojson.shp')"
+    "tracts = gpd.read_file('data/geodata/ch-cantons.topojson.shp')"
    ]
   },
   {
@@ -1082,12 +1082,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We recovered two dictionaries from two papers. We show how to preform nlp techniques on one dictionary."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DICT_PATH = \"dictionary_th2.csv\"\n",
+    "DICT_PATH = \"data/dictionaries/dictionary_mental_illness.csv\"\n",
     "dictionaries = pd.read_csv(DICT_PATH)\n",
     "dictionaries.head()"
    ]
@@ -1296,7 +1303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pkl.load( open( \"keyword_frames/english_keyworded_tweets.pkl\", \"rb\" ))"
+    "df = pkl.load( open( \"data/keyword_tweets/english_keyworded_tweets.pkl\", \"rb\" ))"
    ]
   },
   {
@@ -1339,7 +1346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pkl.load( open( \"keyword_frames/french_keyworded_tweets.pkl\", \"rb\" ))"
+    "df = pkl.load( open( \"data/keyword_tweets/french_keyworded_tweets.pkl\", \"rb\" ))"
    ]
   },
   {
@@ -1374,7 +1381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pkl.load( open( \"keyword_frames/german_keyworded_tweets.pkl\", \"rb\" ))"
+    "df = pkl.load( open( \"data/keyword_tweets/german_keyworded_tweets.pkl\", \"rb\" ))"
    ]
   },
   {
