Finished adding labeling analysis

--- a/project/Labeling Analysis.ipynb
+++ b/project/Labeling Analysis.ipynb
@@ -79,7 +79,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "first_iter = pd.read_csv(\"label/labeled_english_1000.csv\")\n",
+    "first_iter = pd.read_csv(\"data/labeled_tweets/english_labeled.csv\")\n",
     "first_iter.head()"
    ]
   },
@@ -227,7 +227,7 @@
    },
    "outputs": [],
    "source": [
-    "print(\"Total appearance of 'overwatch': \", first_iter[first_iter['split'].map(lambda x: 'overw' in x)]['split'].count())"
+    "print(\"Total appearance of 'overwatch': \", first_iter[first_iter['split'].map(lambda x: 'overr' in x)]['split'].count())"
    ]
   },
   {
@@ -285,7 +285,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "second_iter = pd.read_csv(\"labeledtweets/new_english_labeled.csv\")\n",
+    "second_iter = pd.read_csv(\"data/labeled_tweets/new_english_labeled.csv\")\n",
     "second_iter.head()"
    ]
   },
