Adding small changes

--- a/project/project2.ipynb
+++ b/project/project2.ipynb
@@ -890,7 +890,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracts = gpd.read_file('data/geodata/ch-cantons.topojson.shp')"
+    "tracts = gpd.read_file('SHAPEFILE_LV95_LN02/swissBOUNDARIES3D_1_3_TLM_BEZIRKSGEBIET.shp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracts"
    ]
   },
   {
@@ -900,7 +909,7 @@
    "outputs": [],
    "source": [
     "#join based on location data, we associate a region with a location\n",
-    "tract_counts = gpd.tools.sjoin(location, tracts).groupby('id').size()"
+    "tract_counts = gpd.tools.sjoin(location, tracts).groupby('NAME').size()"
    ]
   },
   {
@@ -910,7 +919,7 @@
    "outputs": [],
    "source": [
     "#add the counts to the tracts data\n",
-    "tracts.set_index('id', inplace=True)\n",
+    "tracts.set_index('NAME', inplace=True)\n",
     "tracts['counts'] = tract_counts\n",
     "tracts.reset_index(inplace=True)"
    ]
@@ -940,9 +949,18 @@
     "SWISS_COORD = [46.85, 8.23] #location of switzerland\n",
     "swiss_map = folium.Map(location = SWISS_COORD, zoom_start = 8, tiles = 'cartodbpositron')\n",
     "\n",
-    "swiss_map.choropleth(tracts.to_json(), data = tracts, key_on = 'feature.properties.{}'.format('id'),\n",
-    "                columns = ['id', 'counts'], fill_color = 'YlOrRd', threshold_scale=[1000, 10000, 20000, 30000, 40000])\n",
+    "swiss_map.choropleth(tracts.to_json(), data = tracts, key_on = 'feature.properties.{}'.format('NAME'),\n",
+    "                columns = ['NAME', 'counts'], fill_color = 'YlOrRd', threshold_scale=[1000, 10000, 20000, 30000, 40000])\n",
     "swiss_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swiss_map.save('lol.html')"
    ]
   },
   {
