--- a/project/project2.ipynb
+++ b/project/project2.ipynb
@@ -75,9 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#colors for the charts\n",
@@ -201,9 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "columns = ['main', 'published', 'source_spam_probability', 'source_location', 'tags', 'lang', 'sentiment',\n",
@@ -407,9 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "spam_mask = (twitter_df['source_spam_probability'] >= 0.5)\n",
@@ -420,9 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lang_mask = ~twitter_df.lang.isin(['de', 'en', 'fr'])\n",
@@ -501,9 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "alphanum_filter = lambda data: re.sub(r'[^\\w\\s]', '', data)"
@@ -763,9 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Declaring functions\n",
@@ -802,9 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "yearly_distribution = twitter_df.published.map(lambda x: x.month).value_counts()"
@@ -868,9 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#we should probably move this into processing\n",
@@ -887,9 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "locations = process_location_data(twitter_df)"
@@ -898,9 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#transfrom to geoseries, use the correct format\n",
@@ -910,9 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#merge with dataframe\n",
@@ -922,49 +900,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "tracts = gpd.read_file('SHAPEFILE_LV95_LN02/swissBOUNDARIES3D_1_3_TLM_LANDESGEBIET.shp')"
+    "municipalities = gpd.read_file('data/geodata/ch-municipalities.shp')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "municipalities.geometry = municipalities.geometry.to_crs(location_geo.crs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#join based on location data, we associate a region with a location\n",
-    "tract_counts = gpd.tools.sjoin(location, tracts).groupby('NAME').size()"
+    "counts = gpd.tools.sjoin(location, municipalities).groupby('id').size()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#add the counts to the tracts data\n",
-    "tracts.set_index('NAME', inplace=True)\n",
-    "tracts['counts'] = tract_counts\n",
-    "tracts.reset_index(inplace=True)"
+    "municipalities.set_index('id', inplace=True)\n",
+    "municipalities['counts'] = counts\n",
+    "municipalities.fillna(0, inplace=True) #if we can't find match we have 0 tweets\n",
+    "municipalities.reset_index(inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "tract_counts.head() #this is how it looks like"
+    "municipalities.reset_index(inplace=True)"
    ]
   },
   {
@@ -977,17 +957,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "SWISS_COORD = [46.85, 8.23] #location of switzerland\n",
-    "swiss_map = folium.Map(location = SWISS_COORD, zoom_start = 8, tiles = 'cartodbpositron')\n",
-    "\n",
-    "swiss_map.choropleth(tracts.to_json(), data = tracts, key_on = 'feature.properties.{}'.format('NAME'),\n",
-    "                columns = ['NAME', 'counts'], fill_color = 'YlOrRd', threshold_scale=[1000, 10000, 20000, 30000, 40000])\n",
-    "swiss_map"
+    "municipalities_0 = municipalities[municipalities.counts < 10]\n",
+    "municipalities_1 = municipalities[municipalities.counts >= 10]"
    ]
   },
   {
@@ -996,7 +970,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "swiss_map.save('lol.html')"
+    "SWISS_COORD = [46.85, 8.23] #location of switzerland\n",
+    "swiss_map = folium.Map(location = SWISS_COORD, zoom_start = 8, tiles = 'cartodbpositron')\n",
+    "\n",
+    "swiss_map.choropleth(municipalities_1.to_json(), data = municipalities_1, key_on = 'feature.properties.{}'.format('id'),\n",
+    "                columns = ['id', 'counts'], fill_color = 'PuRd', threshold_scale=[11, 500, 1000, 2000, 5000, 10000], legend_name='Number of tweets')\n",
+    "swiss_map.choropleth(municipalities_0.to_json(), data = municipalities_0, \n",
+    "                     key_on = 'feature.properties.{}'.format('id'),\n",
+    "                     columns = ['id', 'counts'], fill_color = 'PuBu', \n",
+    "                     threshold_scale=[0, 10], legend_name='Area of little to no data',\n",
+    "                     fill_opacity=0.1, line_opacity=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "swiss_map"
    ]
   },
   {
@@ -1173,9 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "en_dict = dictionary_1['english'].dropna()\n",
@@ -1193,9 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tknzr = TweetTokenizer()\n",
@@ -1235,9 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def dict_cleaning(dicts):\n",
@@ -1264,9 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fr_dict = dict_remove_stops(fr_dict, 'french')\n",
@@ -1277,9 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "en_dict = dict_stem_words(en_dict, 'english')\n",
@@ -1340,9 +1324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def compare(s, t):\n",
@@ -1421,9 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "small_english_filtered.keywords.map(lambda x: ' '.join(x[0])).value_counts()"
@@ -1432,9 +1412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('number of matching tweets: ', small_english_filtered.main.count())"
@@ -1443,9 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pkl.load( open( \"data/keyword_tweets/small_french_keyworded_tweets.pkl\", \"rb\" ))\n",
@@ -1456,9 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "small_french_filtered[['main', 'keywords']].head(10)"
@@ -1467,9 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "small_french_filtered.keywords.map(lambda x: ' '.join(x[0])).value_counts()"
@@ -1478,9 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pkl.load( open( \"data/keyword_tweets/small_german_keyworded_tweets.pkl\", \"rb\" ))\n",
@@ -1491,9 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "small_german_filtered[['main', 'keywords']].head(10)"
@@ -1502,9 +1470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "small_german_filtered.keywords.map(lambda x: ' '.join(x[0])).value_counts()"
@@ -1520,9 +1486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pkl.load( open( \"data/keyword_tweets/english_keyworded_tweets.pkl\", \"rb\" ))"
@@ -1531,9 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "english_filtered = df[(df.lang == 'en') & (df.keywords.map(lambda x: x != [] ))]\n",
@@ -1543,9 +1505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('number of matching tweets: ', english_filtered.main.count())"
@@ -1554,9 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "english_filtered.keywords.map(lambda x: ' '.join(x[0])).value_counts()"
@@ -1580,9 +1538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pkl.load( open( \"data/keyword_tweets/french_keyworded_tweets.pkl\", \"rb\" ))"
@@ -1591,9 +1547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "french_filtered = df[(df.lang == 'fr') & (df.keywords.map(lambda x: x != [] ))]\n",
@@ -1603,9 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('number of matching tweets: ', french_filtered.main.count())"
@@ -1614,9 +1566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "french_filtered.keywords.map(lambda x: ' '.join(x[0])).value_counts()"
@@ -1632,9 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pkl.load( open( \"data/keyword_tweets/german_keyworded_tweets.pkl\", \"rb\" ))"
@@ -1643,9 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "german_filtered = df[(df.lang == 'de') & (df.keywords.map(lambda x: x != [] ))]\n",
@@ -1655,9 +1601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('number of matching tweets: ', german_filtered.main.count())"
@@ -1666,9 +1610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "german_filtered.keywords.map(lambda x: ' '.join(x[0])).value_counts()"
@@ -1720,9 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dictionary = corpora.Dictionary(english_filtered.tokenized)\n",
@@ -1734,9 +1674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ldamodel = models.LdaMulticore(corpus, id2word=dictionary, num_topics=6, workers=3, iterations=100, passes=10)\n",
@@ -1746,9 +1684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#creating the visualisation\n",
@@ -1766,9 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "german_model = models.LdaModel.load('models/german.model')"
@@ -1777,9 +1711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "german_model.show_topics()"
@@ -1788,9 +1720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "french_model = models.LdaModel.load('models/french.model')"
@@ -1799,9 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "french_model.show_topics()"
@@ -1819,9 +1747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "first_iter = pd.read_csv(\"data/labeled_tweets/english_labeled.csv\")\n",
@@ -1855,9 +1781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#HELPER FUNCTION:\n",
@@ -1869,7 +1793,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1880,9 +1803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tweet_search(first_iter, 'therapy')"
@@ -1891,9 +1812,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tweet_search(first_iter, 'overthinking')"
@@ -1909,9 +1828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#HELPER FUNCTION:\n",
@@ -1926,9 +1843,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "md_search(first_iter, 'hate', 'split')"
@@ -1937,9 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "md_search(first_iter, 'pain', 'split')"
@@ -1948,9 +1861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "md_search(first_iter, 'addict', 'split')"
@@ -1966,9 +1877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#HELPER FUNCTION:\n",
@@ -1980,9 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "blacklisted_search(first_iter, 'overw')\n",
@@ -1992,9 +1899,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "blacklisted_search(first_iter, 'syria')\n",
@@ -2006,7 +1911,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -2059,9 +1963,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "second_iter = pd.read_csv(\"data/labeled_tweets/new_english_labeled.csv\")\n",
@@ -2089,9 +1991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tweet_search(second_iter, 'breakdown')"
@@ -2100,9 +2000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "exp_count = second_iter[second_iter['main'].map(lambda x: ('confused' in x or 'lonely' in x) and 'sad' in x)]['main']\n",
@@ -2120,9 +2018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "md_search(second_iter, 'sadly', 'main')"
@@ -2131,9 +2027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sm_count = second_iter[second_iter['main'].map(lambda x: 'sonic' in x and 'mania' in x)]['main']\n",
@@ -2258,9 +2152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -2274,9 +2166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -2284,7 +2174,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -2298,7 +2188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
